Modifiche al SecConfig per avere configurazione CORS stretta:
Gestione anche per la configurazione del JWT/OAuth2.
Questo consente anche di proteggersi da richieste non proveniente dal frontend